# hello-rust

./: .env  Cargo.toml  README.md
.cargo/: config
migrations/2018-11-03-160713_create_things/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/db/: mod.rs  thing.rs
src/models/: mod.rs  thing.rs
static/: index.html
